--- a/ifit/src/App.css
+++ b/ifit/src/App.css
@@ -1,38 +1,17 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    text-align: center;
+    /* font-family: 'Lato', sans-serif; */
+    font-family: 'Nunito', sans-serif;
+  
+  
+    /* background-color:#FAF0E6; */
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .headerSection {
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  
+  
+  
+  
+  
+  
